added html, and css!

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,63 @@
 <!DOCTYPE html>
 <html>
-  <title>Jovian Career</title>
-  <body>
-    hello, Mikeyyy hahahaha
+  <title>
+    <h1>Jovian Career</h1>
+  </title>
+   <style>
+        h1 {
+          font-size: 30px;
+          font-family: Arial;
+          color: rgb(100,100,100);
+          text-align: center
+        }
+        h2 {
+          font-family: Arial;
+          color: rgb(100,100,100);
+          text-align: center
+        }
+        h3 {
+          font-family: Arial;
+          text-align: center
+        }
+  
+        #banner{
+          width: 100%;
+          height: 360px;
+          object-fit: cover;
+        }
+
+        p{
+          font-family: Arial;
+        }
+        #container{
+
+          max-width: 720px;
+          margin: 0 auto 0 auto;
+          
+        }
+      
+     
+    </style>
+  <div id="container">
+    <body>
+    <h1>Jovian Career</h1>
+    
+    <center><img id=banner src="https://jovian-careers-website.jarredfederizo.repl.co/static/lake.jpg" alt="Lakes! width="200" height="200"></center>
+    
+    <center><h2>About Jarred</h2></center>
+    <center><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>      </center>
+
+    <hr>
+    
+    <h2>Job Openings</h2>
+    <p><h3>Data Analyst</h3></p>
+      <div style="text-align: center;">
+        <button>Contact Us</button>
+      </div>
+    
+    
   </body>
+    
+  </div>
+  
 </html>
